syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string  first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting  greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetServerStreamRequest {
  Greeting  greeting = 1;
}

message GreetServerStreamResponse {
  string result = 1;
}

message GreetClientStreamRequest {
  Greeting  greeting = 1;
}

message GreetClientStreamResponse {
  string result = 1;
}

message GreetBiDiStreamRequest {
  Greeting  greeting = 1;
}

message GreetBiDiStreamResponse {
  string result = 1;
}

service GreetService {
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  //ServerStreaming
  rpc GreetServerStream(GreetServerStreamRequest) returns (stream GreetServerStreamResponse) {};
  //ClientStreaming
  rpc GreetClientStream(stream GreetClientStreamRequest) returns (GreetClientStreamResponse) {};
  //BiDiStreaming
  rpc GreetBiDiStream(stream GreetBiDiStreamRequest) returns (stream GreetBiDiStreamResponse) {};
}